# bedrock-rs

./: Cargo.toml  README.md
crates/addon/: Cargo.toml
crates/addon/src/: error.rs  manifest.rs  version.rs
crates/addon/src/resource/: mod.rs
crates/level/: Cargo.toml
crates/level/src/level/: chunk.rs  chunk_cache.rs  file_interface.rs  level.rs
crates/level/src/level/db_interface/: bedrock_key.rs  rusty.rs
crates/level/test_level/db/: LOG  MANIFEST-000007
crates/level/tests/: api_test.rs
crates/proto/: Cargo.toml
crates/proto/src/: client_chain_data.rs  codec.rs  encryption.rs  lib.rs  listener.rs
crates/proto/src/connection/: mod.rs
crates/proto/src/connection/shard/: arc.rs  task.rs
crates/proto/src/transport/: connection.rs
crates/proto/src/version/: mod.rs
crates/proto/src/version/v662/enums/: actor_event.rs  actor_flags_bitset.rs  actor_link_type.rs  animation_mode.rs  book_edit_action.rs  camera_shake_action.rs  camera_shake_type.rs  chat_restriction_level.rs  code_builder_storage.rs  command_output_type.rs  command_permission_level.rs  container_enum_name.rs  data_item_type.rs  enchant_type.rs  identity_definition_type.rs  item_descriptor_internal_type.rs  item_stack_net_result.rs  item_stack_request_action_type.rs  lab_table_reaction_type.rs  mirror.rs  mod.rs  modal_form_cancel_reason.rs  pack_type.rs  persona.rs  photo_type.rs  player_list_packet_type.rs  player_position_mode.rs  player_respawn_state.rs  prediction_type.rs  resource_pack_response.rs  rotation.rs  score_packet_type.rs  show_store_offer_redirect_type.rs  simulation_type.rs  structure_template_request_operation.rs  structure_template_response_type.rs  text_packet_type.rs
crates/proto/src/version/v662/packets/: emote.rs  interact.rs  lab_table.rs  level_chunk.rs  login.rs  mob_effect.rs  move_player.rs  npc_request.rs  position_tracking_db_client_request.rs  position_tracking_db_server_broadcast.rs  request_ability.rs  resource_pack_chunk_data.rs  resource_pack_data_info.rs  sub_chunk.rs  take_item_actor.rs
crates/proto/src/version/v662/types/: camera_preset.rs  mod.rs  serialized_skin.rs
crates/proto/src/version/v766/: gamepackets.rs
crates/proto/src/version/v776/: gamepackets.rs  helper.rs
crates/proto/src/version/v776/packets/: mod.rs  (+8 more)
crates/proto/src/version/v785/: gamepackets.rs  helper.rs  info.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/login/: mod.rs
crates/server/src/server/: builder.rs  mod.rs
(+66 files in other folders)
