[package]
name = "bedrockrs_addon"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.8", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }

image = "0.25"

vek = "0.17"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"

walkdir = "2.5"
anyhow = "1.0.98"
byteorder = "1.5.0"
sha2 = "0.10.8"
zip = "2.6.1"