[package]
name = "bedrockrs_level"
version = "0.1.0"
edition = "2024"

[dependencies]

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }

thiserror = "1.x"
byteorder = "1.x"
uuid = { version = "1.x", features = ["v4"] }
bytemuck = { version = "1.19.x", features = ["must_cast"] }
len-trait = "0.6.x"
concat-idents = "1.x.x"
serde = "1.x.x"
rusty-leveldb = "3.x.x"
miniz_oxide = "0.x.x"
vek = "0.17"
bedrockrs_proto = { path = "../proto" }

[dev-dependencies]
rand = "0.8"

[profile.release]
debug = true

[[test]]
name = "api_test"
required-features = ["default-impl"]

[features]
default-impl = []
