[package]
name = "bedrockrs_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bedrockrs_proto_core = { path = "../proto_core" }
bedrockrs_macros = { path = "../macros" }
bedrockrs_addon = { path = "../addon" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
xuid = "1.0"

byteorder = "1.5"
varint-rs = "2.2"

log = "0.4"
vek = "0.17"
thiserror = "2.0"

jsonwebtoken = "9.3"
rand = "0.9.0"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
pkcs8 = "0.11.0-rc.2"
once_cell = "1.21.3"
flate2 = "1.0"
snap = "1.1"

x509-cert = "0.2"

bitflags = "2.6.0"
serde = { version = "1.0", features = ["derive"] }

rak-rs = { version = "0.3", default-features = false, features = ["async_tokio", "mcpe"] }
aes-gcm = "0.10"
sha2 = "0.10.8"
p384 = { version = "0.13", features = ["pkcs8"] }
getrandom = "0.3.2"
aes = "0.8.4"
ctr = "0.9"