[package]
name = "bedrockrs_server"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"

bedrockrs_shared = { path = "../shared" }
bedrockrs_proto = { path = "../proto" }

tokio = { version = "1.40", features = ["full", "tracing"] }

xuid = "1.0"

[features]
scoreboard = []
forms = []
visibility = []
